// OLISTAY Recommendation Service - Protocol Buffer Definition
// Generate Python code: python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. recommendation.proto

syntax = "proto3";

package olistay.recommendation;

// Main Recommendation Service
service RecommendationService {
  // Get property recommendations for a user
  rpc GetRecommendations(RecommendationRequest) returns (RecommendationResponse);

  // Get explanation for a specific property recommendation
  rpc ExplainRecommendation(ExplainRequest) returns (ExplainResponse);

  // Provide feedback on recommendation quality
  rpc SubmitFeedback(FeedbackRequest) returns (FeedbackResponse);

  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request Messages

message RecommendationRequest {
  string user_id = 1;
  FinancialProfile financial_profile = 2;
  UserPreferences preferences = 3;
  int32 max_results = 4;  // Default: 10
}

message FinancialProfile {
  double monthly_income = 1;          // in CFA francs
  double monthly_expenses = 2;        // in CFA francs
  double savings_goal = 3;            // monthly savings target
  bool has_dependents = 4;
  int32 number_of_dependents = 5;
  repeated string expense_categories = 6;  // transportation, food, utilities, etc.
  map<string, double> detailed_expenses = 7;
}

message UserPreferences {
  repeated string preferred_areas = 1;        // neighborhood names
  LocationPreference location = 2;
  PropertyRequirements property = 3;
  repeated string required_amenities = 4;
  double max_commute_distance = 5;            // in kilometers
  string property_type = 6;                   // apartment, house, studio, etc.
}

message LocationPreference {
  string workplace_address = 1;
  double workplace_lat = 2;
  double workplace_lng = 3;
  bool near_public_transport = 4;
  bool near_schools = 5;
  bool near_markets = 6;
}

message PropertyRequirements {
  int32 min_bedrooms = 1;
  int32 min_bathrooms = 2;
  bool furnished = 3;
  bool parking_required = 4;
  bool security_required = 5;
  bool child_friendly = 6;
}

message ExplainRequest {
  string user_id = 1;
  string property_id = 2;
  FinancialProfile financial_profile = 3;
}

message FeedbackRequest {
  string user_id = 1;
  string property_id = 2;
  double rating = 3;              // 1-5 stars
  string feedback_text = 4;
  bool contacted_landlord = 5;
  bool scheduled_viewing = 6;
  string timestamp = 7;
}

message HealthCheckRequest {
  string service_name = 1;
}

// Response Messages

message RecommendationResponse {
  string request_id = 1;
  repeated PropertyRecommendation recommendations = 2;
  RecommendationMetadata metadata = 3;
  string status = 4;
  string message = 5;
}

message PropertyRecommendation {
  string property_id = 1;
  double compatibility_score = 2;     // 0-100
  ScoreBreakdown score_breakdown = 3;
  string recommendation_reason = 4;
  AffordabilityAnalysis affordability = 5;
}

message ScoreBreakdown {
  double financial_score = 1;         // 0-100
  double location_score = 2;          // 0-100
  double lifestyle_score = 3;         // 0-100
  double overall_score = 4;           // weighted average
}

message AffordabilityAnalysis {
  double property_rent = 1;
  double affordable_rent = 2;
  double rent_to_income_ratio = 3;   // percentage
  double remaining_disposable_income = 4;
  bool within_budget = 5;
  string affordability_status = 6;    // "Comfortable", "Stretching", "Over Budget"
}

message RecommendationMetadata {
  int32 total_properties_analyzed = 1;
  double processing_time_ms = 2;
  string timestamp = 3;
  string algorithm_version = 4;
  string city = 5;
}

message ExplainResponse {
  string property_id = 1;
  ScoreBreakdown score_breakdown = 2;
  repeated string strengths = 3;
  repeated string concerns = 4;
  string detailed_explanation = 5;
  map<string, string> additional_info = 6;
}

message FeedbackResponse {
  string feedback_id = 1;
  string status = 2;
  string message = 3;
  string timestamp = 4;
}

message HealthCheckResponse {
  string status = 1;                  // "healthy", "degraded", "unhealthy"
  string service_name = 2;
  string version = 3;
  string timestamp = 4;
  int64 uptime_seconds = 5;
  int64 requests_processed = 6;
  double average_response_time_ms = 7;
}

// Common Data Types

enum PropertyType {
  PROPERTY_TYPE_UNSPECIFIED = 0;
  STUDIO = 1;
  APARTMENT = 2;
  HOUSE = 3;
  ROOM = 4;
  VILLA = 5;
}

enum AffordabilityLevel {
  AFFORDABILITY_UNSPECIFIED = 0;
  VERY_AFFORDABLE = 1;
  AFFORDABLE = 2;
  MODERATE = 3;
  STRETCHING = 4;
  OVER_BUDGET = 5;
}